--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
     "react-scripts": "3.4.3"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node server",
     "build": "react-scripts build",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "postinstall": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
